fix z-index

--- a/app/scss/components/_chat--aside.scss
+++ b/app/scss/components/_chat--aside.scss
@@ -7,7 +7,7 @@
   border-color: rgba(200, 200, 200, 0.42);
   border-radius: 0;
   @extend %backgraund-secondary;
-  z-index: 5;
+  z-index: 15;
   transform: translateX(-310px);
   transition: all cubic-bezier(.62,.28,.23,.99) 0.3s;
   will-change: transform;
