--- a/app/scss/components/_news.scss
+++ b/app/scss/components/_news.scss
@@ -18,7 +18,6 @@
 }
 
 .news-item {
-  position: relative;
   margin-bottom: 10px;
   padding: 10px;
   background: $backgrond-color-divide;
